Use RawCommandLineLaunch connector for tracing - to get things to work on Windows.